--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.9.11",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.10",
     "quasar": "^1.14.7",
     "vue-i18n": "^8.18.2",
     "vue-qrcode-reader": "^2.0.2",
